--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,39 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.questions {
+  border: 1px solid black;
+  border-radius: 2px;
+  text-align: left;
+  width: 70%;
+  float: right;
+}
+
+.jury-box {
+  border: 1px solid black;
+  border-radius: 3px;
+  background-color: #754B36;
+  height: 300px;
+}
+
+.juror {
+  background-color: #996247;
+  border: 1px solid black;
+  display: inline-block;
+  padding: 10px;
+  margin: 5px;
+}
+
+.jury-box img {
+  width: 100px;
+  height: 100px;
+}
+
+.question {
+  list-style: none;
+}
+
+.answer {
+  background-color: lightgreen;
+}
