--- a/src/Jurors/jurors.css
+++ b/src/Jurors/jurors.css
@@ -3,7 +3,13 @@
   border: 1px solid black;
   border-radius: 3px;
   background-color: #754B36;
-  height: 300px;
+  height: auto;
+}
+
+.jurors {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .juror {
@@ -12,6 +18,8 @@
   display: inline-block;
   padding: 10px;
   margin: 5px;
+  max-width: 150px;
+  min-width: 150px;
 }
 
 .jury-box img {
