--- a/src/Questioning/questioning.css
+++ b/src/Questioning/questioning.css
@@ -5,10 +5,18 @@
 .flex {
   display: flex;
   margin-top: 10px;
+  flex-shrink: 0;
+  flex-basis: 1;
 }
 
 .question {
   list-style: none;
+}
+
+.jurorPic {
+  min-width: 100px;
+  min-height: 100px;
+  margin-right: 5px;
 }
 
 .answer {
