--- a/src/app.css
+++ b/src/app.css
@@ -16,3 +16,34 @@
   width: 100%;
   border: 1px solid black;
 }
+
+.startModal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: auto;
+  width: 50%;
+  background-color: white;
+  border: 2px solid brown;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+}
+
+.startModal:focus {
+  outline: none;
+}
+
+.startText {
+  text-align: center;
+  padding: 0 10px;
+}
+
+.button {
+  margin-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
