--- a/src/Blackmail/blackmail.css
+++ b/src/Blackmail/blackmail.css
@@ -1,4 +1,23 @@
 .root {
-  border: solid 1px black;
+  padding: 10px;
   margin-right: auto;
+}
+
+.clues {
+
+}
+
+.blackmailHeader {
+  text-align: center;
+  padding: 0;
+  margin: 2px 0;
+}
+
+p {
+  padding: 0;
+  margin: 2px 0 5px 0;
+}
+
+.yourBlackmails {
+  padding-top: 5px;
 }
