--- a/src/Jurors/jurors.css
+++ b/src/Jurors/jurors.css
@@ -1,9 +1,24 @@
 .jury-box {
-  margin: 0 20px 20px 20px;
+  margin: 20px 20px 20px 20px;
+  padding: 5px;
   border: 1px solid black;
   border-radius: 3px;
-  background-color: #754B36;
+  background-color: #936340;
   height: auto;
+}
+
+.jurorPic {
+  border: 2px solid black;
+}
+
+h2 {
+  padding: 0;
+  margin: 1px 0;
+}
+
+.button {
+  border-radius: 10px;
+  padding: 2px 5px 0px 5px;
 }
 
 .jurors {
@@ -16,11 +31,12 @@
   background-color: #996247;
   border: 1px solid black;
   display: inline-block;
-  padding: 10px;
+  padding: 10px 0;
   margin: 5px;
   max-width: 150px;
   min-width: 150px;
 }
+
 
 .jury-box img {
   width: 100px;
