--- a/src/Jurors/jurors.css
+++ b/src/Jurors/jurors.css
@@ -1,24 +1,15 @@
 .jury-box {
   margin: 20px 20px 20px 20px;
   padding: 5px;
-  border: 1px solid black;
+  border: 10px double black;
   border-radius: 3px;
   background-color: #936340;
   height: auto;
 }
 
-.jurorPic {
-  border: 2px solid black;
-}
-
 h2 {
   padding: 0;
   margin: 1px 0;
-}
-
-.button {
-  border-radius: 10px;
-  padding: 2px 5px 0px 5px;
 }
 
 .jurors {
@@ -29,7 +20,7 @@ h2 {
 
 .juror {
   background-color: #996247;
-  border: 1px solid black;
+  border: 10px double black;
   display: inline-block;
   padding: 10px 0;
   margin: 5px;
