--- a/src/app.css
+++ b/src/app.css
@@ -13,6 +13,10 @@
   margin: 0;
 }
 
+button {
+  background-color: lightblue;
+}
+
 .bottom {
   display: flex;
   margin: 0 20px;
@@ -33,14 +37,16 @@
 .gameState {
   min-width: 300px;
   margin-right: 30px;
-  border: 1px solid black;
-  background-color: #40434E;
+  border: 10px double black;
+  color: #40434E;
+  background-color: #FBFBF2;
 }
 
 .jurorCard {
   width: 100%;
-  border: 1px solid black;
-  background-color: #40434E;
+  border: 10px double black;
+  color: #40434E;
+  background-color: #FBFBF2;
 }
 
 .modal {
@@ -51,7 +57,7 @@
   height: auto;
   width: 50%;
   background-color: white;
-  border: 2px solid #0C0300;
+  border: 10px double #FBFBF2;
   border-radius: 4px;
   display: flex;
   flex-direction: column;
