--- a/src/Jurors/jurors.css
+++ b/src/Jurors/jurors.css
@@ -18,18 +18,23 @@ h2 {
   justify-content: center;
 }
 
+.jurorButton {
+  padding-top: 2px;
+}
+
 .juror {
   background-color: #996247;
   border: 10px double black;
   display: inline-block;
-  padding: 10px 0;
+  padding: 10px 0 0 0;
   margin: 5px;
   max-width: 150px;
   min-width: 150px;
 }
 
-
 .jury-box img {
+  padding: 0;
+  margin: 0;
   width: 100px;
   height: 100px;
 }
