--- a/src/Jurors/jurors.css
+++ b/src/Jurors/jurors.css
@@ -1,6 +1,6 @@
 .jury-box {
   margin: 20px 20px 20px 20px;
-  padding: 5px;
+  padding: 50px 5px;
   border: 10px double black;
   border-radius: 3px;
   background-color: #936340;
@@ -22,19 +22,23 @@ h2 {
   padding-top: 2px;
 }
 
+.juror-name {
+  margin-bottom: 10px;
+}
+
 .juror {
   background-color: #996247;
   border: 10px double black;
   display: inline-block;
   padding: 10px 0 0 0;
   margin: 5px;
-  max-width: 150px;
-  min-width: 150px;
+  width: 100px;
+  width: 100px;
 }
 
 .jury-box img {
   padding: 0;
   margin: 0;
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
 }
