--- a/src/Questioning/questioning.css
+++ b/src/Questioning/questioning.css
@@ -11,14 +11,17 @@
 
 .question {
   list-style: none;
+  border-bottom: 1px solid black;
 }
 
 .jurorPic {
   min-width: 100px;
-  min-height: 100px;
-  margin-right: 5px;
   max-width: 100px;
   max-height: 100px;
+  min-height: 100px;
+  height: 100px;
+  width: 100px;
+  margin-right: 5px;
   padding: 1em;
 }
 
